safari image stretch fix?

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -144,6 +144,7 @@ figure
         width: 5in
         max-width: 100%
         margin: 0 auto
+        height: auto !important
 
 figure.w2in img
     width: 2in
